# PhishSage

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
heuristics/: headers.py  links.py
src/phishsage/: main.py
src/phishsage/clients/: __init__.py  virustotal.py
src/phishsage/config/: config.toml  loader.py  schemas.py
src/phishsage/handlers/: __init__.py  attachments.py  headers.py  links.py
src/phishsage/heuristics/: __init__.py  attachments.py  headers.py  links.py
src/phishsage/models/: certificate.py  email.py  links.py  redirect.py  results.py  virustotal.py  whois.py
src/phishsage/outputs/: printer.py  writer.py
src/phishsage/outputs/printer/: __init__.py  attachments.py  headers.py  links.py  shared.py
src/phishsage/parsers/: __init__.py  attachment_processor.py  dirty_parser.py  header_parser.py  ip_extractor.py  link_extractor.py  url_parser.py
src/phishsage/services/: cert_checker.py  redirect.py  virustotal.py  whois.py
src/phishsage/utils/: __init__.py  api_clients.py  attachment_processor.py  attachments.py  cache.py  cli_args.py  header_helpers.py  header_parser.py  url_helpers.py  url_parser.py  yara_engine.py
utils/: api_clients.py  attachments.py  cli_args.py  config.py  dirty_parser.py  header_parser.py  url_helpers.py
