[project]
name = "phishsage"
version = "0.1.0"
description = "Email phishing analysis toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    { name = "0xlam", email = "208283706+0xlam@users.noreply.github.com" }
]

dependencies = [
    "beautifulsoup4==4.13.5",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cryptography==43.0.0",
    "dnspython==2.8.0",
    "email_validator==2.2.0",
    "filelock==3.20.0",
    "idna==3.10",
    "mail-parser==4.1.4",
    "pycparser==2.23",
    "pycryptodomex==3.20.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-magic==0.4.27",
    "python-whois==0.9.3",
    "requests==2.32.4",
    "requests-file==3.0.1",
    "six==1.17.0",
    "soupsieve==2.8",
    "tldextract==5.3.0",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
    "vt-py==0.22.0",
    "yara-python==4.5.4"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]

[project.scripts]
phishsage = "phishsage.main:main"

[project.urls]
Homepage = "https://github.com/0xlam/PhishSage"
Repository = "https://github.com/0xlam/PhishSage"
Issues = "https://github.com/0xlam/PhishSage/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
