[project]
name = "phishsage"
dynamic = ["version"]
description = "Lightweight email triage and phishing-analysis toolkit. Extracts headers, attachments, and links, applies heuristic checks, and produces structured insights."
readme = "README.md"
keywords = ["phishing", "email-security", "SOC", "SIEM", "threat-intelligence", "email-analysis", "cybersecurity", "phish-detection", "incident-response"]
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]


authors = [
    { name = "Adams", email = "208283706+0xlam@users.noreply.github.com" }
]


classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]


dependencies = [
    "mail-parser>=4.0,<5",
    "beautifulsoup4>=4.12,<5",
    "tldextract>=5.0,<6",
    "python-dateutil>=2.9,<3",
    "python-dotenv>=1.0,<2",
    "python-whois>=0.9,<1",
    "email_validator>=2.0,<3",
    "idna>=3.6,<4",
    "dnspython>=2.6,<3",
    "aiohttp>=3.9,<4",      
    "aiodns>=3.0,<5",        
    "yarl>=1.9,<2",          
]

[project.optional-dependencies]
attachments = [
    "yara-python>=4.5,<5",
    "python-magic>=0.4,<1",
    "vt-py>=0.18,<1",   
]

links = [
    "cryptography>=43.0,<45",
    "vt-py>=0.18,<1", 
]

all = [
    "phishsage[attachments,links]",
]


[project.scripts]
phishsage = "phishsage.main:main"

[project.urls]
Homepage = "https://github.com/0xlam/PhishSage"
Repository = "https://github.com/0xlam/PhishSage"
Issues = "https://github.com/0xlam/PhishSage/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=65.5.1", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
